# tams_ur5_gazebo

./: CMakeLists.txt  package.xml  setup.py
action/: grasp.action
config/: tams_ur5_gazebo.rviz
launch/: tams_ur5_gazebo.launch
scripts/: compare_joint_states.py  controll_hand_helper.py  gazebo_controller.py  gazebo_controller_old.py  joint_state_estimator.py  joint_state_estimator_old.py  just_move_rviz.py  move_fingers.py  object_iterator.py  plot_empty_gripper.py
scripts/tams_ur5_gazebo_lib/: theta_calculator.py
